<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <!-- Logo -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/inicio_de_sesion"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Campo de correo -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"/>

            <!-- Campo de contraseña -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/edit_text"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"/>

            <!-- Botón de inicio de sesión -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/registerbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#1976D2"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/registrarse"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/loginbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#1976D2"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/inicio_sesion"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <TextView
                android:layout_width="13dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/o"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/googleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@android:color/transparent"
                android:drawableLeft="@drawable/google_icon"
                android:fontFamily="@font/roboto_medium"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/continuar_con_google"
                android:textColor="@color/black"
                app:cornerRadius="8dp"
                app:strokeColor="#CCCCCC"
                app:strokeWidth="0.5dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>